# matyan-core

./: .gitignore  .gitmodules  .pre-commit-config.yaml  NOTICE  README.md  fdb.cluster  mkdocs.yml  pyproject.toml  release.yaml
.cursor/rules/: code-style.mdc  docstrings.mdc  foundationdb-python-api.mdc  logging-conventions.mdc  ruff-ty-uvx.mdc  uv-project-context.mdc
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  3-general-issue.yml  config.yml
.github/workflows/: publish.yml
deploy/grafana/dashboards/: matyan-observability.json
deploy/helm/matyan/: .helmignore  Chart.yaml  README.md  values-dev.yaml  values-production.yaml  values.yaml
deploy/helm/matyan/charts/: fdb-operator-0.3.0.tgz
deploy/helm/matyan/samples/: blob-uri-secret.example.yaml
deploy/helm/matyan/templates/: NOTES.txt  _helpers.tpl  backend-deployment.yaml  backend-service.yaml  backend-servicemonitor.yaml  cleanup-orphan-blobs-cronjob.yaml  cleanup-orphan-s3-cronjob.yaml  cleanup-tombstones-cronjob.yaml  configmap-fdb-cluster.yaml  control-worker-deployment.yaml  control-worker-service.yaml  control-worker-servicemonitor.yaml  fdb-cluster.yaml  frontier-deployment.yaml  frontier-service.yaml  frontier-servicemonitor.yaml  ingestion-worker-deployment.yaml  ingestion-worker-service.yaml  ingestion-worker-servicemonitor.yaml  ingress.yaml  kafka-init-job.yaml  s3-ingress.yaml  s3-init-job.yaml  ui-deployment.yaml  ui-service.yaml
deploy/helm/matyan/tests/: credentials_test.yaml  cronjobs_test.yaml  deployments_test.yaml  fdb_test.yaml  ingress_test.yaml  kafka_test.yaml  s3_test.yaml
deploy/helm/matyan/tests/fixtures/: base.yaml
dev/: compose-cluster.sh  docker-compose.yml  install_all_components.sh
dockerhub-docs/: matyan-backend-overview.md  matyan-frontier-overview.md  matyan-ui-overview.md
docs/: api.md  architecture.md  contributing.md  getting-started.md  glossary.md  index.md
docs/advanced/: backend.md  client-sdk.md  cloud-blob-storage.md  foundationdb.md  frontier.md  index.md  kafka.md  s3-blobs.md  ui.md  workers.md
docs/contributing/: code-style.md  testing.md
docs/deployment/: cloud-storage.md  periodic-cleanup-jobs.md  production.md
docs/quick-start/: convert-data.md  integrations.md  next-steps.md  setup.md  supported-types.md
docs/refs/: api-backend.md  api-client.md  cli.md  env-variables.md  sdk.md
docs/stylesheets/: extra.css
docs/ui/: overview.md
docs/understanding/: concepts.md  data-storage.md  overview.md  public-api-and-versioning.md  search-and-matyanql.md  tombstones.md
docs/using/: artifacts.md  backups-and-restore.md  configure-runs.md  logging.md  manage-runs.md  query-runs.md  remote-tracking.md  search.md
extra/: .dockerignore
scripts/: build-push-prod-images.sh  check_release_consistency.py  publish-docs-to-gh-pages.sh  publish-helm-to-gh-pages.sh  update-helm-values-images.sh
tests/integration/: conftest.py  test_backend_kafka.py  test_client_backend.py  test_client_frontier.py  test_frontier_kafka.py  test_full_pipeline.py  test_worker_control.py  test_worker_ingestion.py
